--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
         <div class="container">
-          <a href="index.html" class="navbar-brand"><img src="img/logo.png" alt=""></a>       
+          <a href="index" class="navbar-brand"><img src="img/logo.png" alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
           </button>
@@ -55,7 +55,7 @@
                 <a class="nav-link page-scroll" href="#contact">Contacto</a>
               </li> 
               <li class="nav-item">
-                <a class="btn btn-singin" href="http://electoral.asesoriaseducate.com/" target="_blank">Ingreso al Sistema</a>
+                <a class="btn btn-singin" href="http://sistema.tusigeweb.com/" target="_blank">Ingreso al Sistema</a>
               </li>
             </ul>
           </div>
@@ -359,9 +359,8 @@
                 <ul class="menu">
                   <li><a href="#home">Inicio</a></li>
                   <li><a href="#services">Nosotros</a></li>
-                  <li><a href="#showcase">Portafolio</a></li>
                   <li><a href="#contact">Contacto</a></li>
-                  <li><a href="#">Login</a></li>
+                  <li><a href="http://sistema.tusigeweb.com/">Login</a></li>
                 </ul>
               </div>
             </div>
