--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="nav-link page-scroll" href="#contact">Contacto</a>
               </li> 
               <li class="nav-item">
-                <a class="btn btn-singin" href="http://sistema.tusigeweb.com/" target="_blank">Ingreso al Sistema</a>
+                <a class="btn btn-singin" href="http://sistema.tusigeweb.com/">Ingreso al Sistema</a>
               </li>
             </ul>
           </div>
